Se agrega el cambio estado de usuarios y el modelo product

--- a/VaselinaWeb.API/appsettings.json
+++ b/VaselinaWeb.API/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Settings": {
+    "EnvioCorreo": {
+      "Sender": "nalguitasanasolita@gmail.com",
+      "Password" :  "1037593481"
+    }
+  }
 }
