--- a/VaselinaWeb.API/VaselinaWeb.API.csproj
+++ b/VaselinaWeb.API/VaselinaWeb.API.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200714215027_CreacionTablaProduct.cs" />
+    <Compile Remove="Migrations\20200714215027_CreacionTablaProduct.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5">
