Se agrego el campo rol en Users, se agrego autorización por claim por roles, se creo la clase roles.

--- a/VaselinaWeb.API/VaselinaWeb.API.csproj
+++ b/VaselinaWeb.API/VaselinaWeb.API.csproj
@@ -11,6 +11,8 @@
     <Compile Remove="Migrations\20200715164034_CambioTipoImagenTablaProduct.Designer.cs" />
     <Compile Remove="Migrations\20200715170926_CambioTipoTablaProducts.cs" />
     <Compile Remove="Migrations\20200715170926_CambioTipoTablaProducts.Designer.cs" />
+    <Compile Remove="Migrations\20200720202128_SeAgregaCampoRolenUser.cs" />
+    <Compile Remove="Migrations\20200720202128_SeAgregaCampoRolenUser.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
