--- a/VaselinaWeb.API/appsettings.json
+++ b/VaselinaWeb.API/appsettings.json
@@ -2,19 +2,29 @@
   "ConnectionStrings": {
     "DefaultConnetion": "Server=PAVILION\\SQLSERVER2017;Database=VaselinaDB;Trusted_Connection=True;"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+      "Override": {
+        "Microsoft": "Error"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Server=PAVILION\\SQLSERVER2017;Database=VaselinaDB;Trusted_Connection=True;",
+          "tableName": "Log"
+        }
+      }
+    ]
   },
   "AllowedHosts": "*",
 
   "Settings": {
     "EnvioCorreo": {
       "Sender": "nalguitasanasolita@gmail.com",
-      "Password" :  "1037593481"
+      "Password": "1037593481"
     }
   }
 }
